cabal-version:      2.4
name:               Dijkstra
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             player01osu
maintainer:         player01osu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Dijkstra
    main-is: Visualizer.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Dijkstra,
        Graphs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        gloss,
        random,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010
